edit links and footer

--- a/template.html
+++ b/template.html
@@ -19,12 +19,13 @@
   </head>
   <body>
     <header>
-      <h1 class="site-title"><a href="index.html">My 90s Blog</a></h1>
+      <h1 class="site-title"><a href="index.html">trog.codes</a></h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="archive.html">Archive</a></li>
-          <li><a href="about.html">About</a></li>
+          <!-- <li><a href="about.html">About</a></li> -->
+          <!-- <li><a href="jcarlton1227@gmail.com">Contact</a></li> -->
         </ul>
       </nav>
     </header>
@@ -39,8 +40,17 @@
     </main>
 
     <footer>
-      <p><a href="https://gituhb.com/rconjoe/blogdor">Source</a></p>
-      <p><small>Made with Bash, Markdown, Pandoc, and 90s nostalgia</small></p>
+      <div class="retro-elements">
+        <a href="index.html">Home</a> | <a href="archive.html">Archive</a> |
+        <!-- <a href="about.html">About</a> | -->
+        <!-- <a href="jcarlton1227@gmail.com">Contact</a> | -->
+        <a href="https://gituhb.com/rconjoe/blogdor">Source</a>
+      </div>
+
+      <div class="visitor-counter">
+        You are visitor #42 (just kidding, fuck tracking)
+      </div>
+      <p><small>Made with bash, markdown, pandoc, and nostalgia</small></p>
     </footer>
   </body>
 </html>
