fix dangerous link typo...

--- a/template.html
+++ b/template.html
@@ -44,7 +44,7 @@
         <a href="index.html">Home</a> | <a href="archive.html">Archive</a> |
         <!-- <a href="about.html">About</a> | -->
         <!-- <a href="jcarlton1227@gmail.com">Contact</a> | -->
-        <a href="https://gituhb.com/rconjoe/blogdor">Source</a>
+        <a href="https://github.com/rconjoe/blogdor">Source</a>
       </div>
 
       <div class="visitor-counter">
