--- a/template.html
+++ b/template.html
@@ -47,9 +47,7 @@
         <a href="https://github.com/rconjoe/blogdor">Source</a>
       </div>
 
-      <div class="visitor-counter">
-        You are visitor #42 (just kidding, fuck tracking)
-      </div>
+      <div class="visitor-counter">You are visitor #42 (jk, fuck tracking)</div>
       <p><small>Made with bash, markdown, pandoc, and nostalgia</small></p>
     </footer>
   </body>
