--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Beats</title>
+    <title>joe's music dump</title>
     <link rel="stylesheet" href="music-style.css" />
   </head>
   <body>
