add teddy credit

--- a/music.html
+++ b/music.html
@@ -248,10 +248,10 @@
       <section class="intro">
         <p>
           These two tracks are songs written by a friend of mine in high school,
-          that I recorded and produced in a garage when I was 16. I am quite
-          proud of that. Many of the other tracks are still lost, so the ones I
-          have found are here for archival purposes. I still think they are
-          quite good music.
+          Teddy Roberts, which I recorded and produced in a garage when I was
+          16. I am quite proud of that. Many of the other tracks are still lost,
+          so the ones I have found are here for archival purposes. I still think
+          they are quite good music.
         </p>
       </section>
       <section class="track-list">
