add teddy and josh credits

--- a/music.html
+++ b/music.html
@@ -247,11 +247,12 @@
       <br />
       <section class="intro">
         <p>
-          These two tracks are songs written by a friend of mine in high school,
-          Teddy Roberts, which I recorded and produced in a garage when I was
-          16. I am quite proud of that. Many of the other tracks are still lost,
-          so the ones I have found are here for archival purposes. I still think
-          they are quite good music.
+          These are songs written by a friend of mine in high school, Teddy
+          Roberts, which I recorded and produced in a garage when I was 16 with
+          my childhood best friend (now tour managing for 311 and I Prevail). I
+          am quite proud of these tracks. Many of the other tracks are still
+          lost, so the ones I have found are here for archival purposes. I still
+          think they are quite good music.
         </p>
       </section>
       <section class="track-list">
