update song desc

--- a/music.html
+++ b/music.html
@@ -30,7 +30,7 @@
             <br />
             Date: May 2025
             <br />
-            Using: MPC Live II, Schecter 5-string, Yamaha acoustic
+            Using: MPC Key 61, Schecter 5-string, Yamaha acoustic
           </p>
           <audio controls>
             <source
