update song desc

--- a/music.html
+++ b/music.html
@@ -24,8 +24,8 @@
         <div class="track" id="tennessee">
           <a href="#2chords"><h2>tennessee</h2></a>
           <p class="description">
-            My best friend is in Tennessee right now, and he needed a beat for a
-            motorcycle video he's making out there.
+            My best friend is in Tennessee at the moment of writing, and he
+            needed a beat for a motorcycle video he's making out there.
             <br />
             <br />
             Date: May 2025
